k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: taa
  labels:
    app.kubernetes.io/name: taa
    app.kubernetes.io/part-of: taa
