k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: taa
  namespace: taa
  labels:
    app.kubernetes.io/name: taa
    app.kubernetes.io/component: server
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: taa
    app.kubernetes.io/component: server
